@@ -363,6 +363,13 @@ USE_PROPOSED_UPDATES
      make USE_PROPOSED_UPDATES=1 all_build
   If no valid source for proposed updates is found, the build will fail.
 
+USE_UDEBS_BACKPORTS_FROM
+  Set to <suite>-backports if it shall be used as an overlay suite when
+  building an image. The resulting image should be able to install some
+  components from backports (e.g. a newer kernel). Defaults to an empty string
+  meaning no backports support.
+  Included in /etc/udebs-backports-source in most initrds.
+
 OMIT_RELEASE_INFO
   Can be used to suppress the inclusion of the files /etc/default-release and
   /etc/udebs-source in some targets (like boot floppies).
